--- a/.env
+++ b/.env
@@ -6,9 +6,9 @@ DEFAULT_TIMEZONE = Asia/Shanghai
 [DATABASE]
 TYPE = mysql
 HOSTNAME = 127.0.0.1
-DATABASE = test
-USERNAME = username
-PASSWORD = password
+DATABASE = www_wse_com
+USERNAME = root
+PASSWORD = 
 HOSTPORT = 3306
 CHARSET = utf8
 DEBUG = true
