--- a/.env
+++ b/.env
@@ -5,10 +5,10 @@ DEFAULT_TIMEZONE = Asia/Shanghai
 
 [DATABASE]
 TYPE = mysql
-HOSTNAME = 127.0.0.1
+HOSTNAME = mysql
 DATABASE = www_wse_com
-USERNAME = root
-PASSWORD = 
+USERNAME = www_wse_com
+PASSWORD = "dTxP]al^jMGzBX2Ac_3@p.cMh"
 HOSTPORT = 3306
 CHARSET = utf8
 DEBUG = true
