--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,9 @@
         "php": ">=7.2.5",
         "topthink/framework": "^6.0.0",
         "topthink/think-orm": "^2.0",
-        "topthink/think-multi-app": "^1.0"
+        "topthink/think-multi-app": "^1.0",
+        "php-amqplib/php-amqplib": "3.1.2",
+        "elasticsearch/elasticsearch": "8.4.1"
     },
     "require-dev": {
         "symfony/var-dumper": "^4.2",
