--- a/.env
+++ b/.env
@@ -5,10 +5,13 @@ DEFAULT_TIMEZONE = Asia/Shanghai
 
 [DATABASE]
 TYPE = mysql
-HOSTNAME = mysql
-DATABASE = www_wse_com
-USERNAME = www_wse_com
-PASSWORD = "dTxP]al^jMGzBX2Ac_3@p.cMh"
+# HOSTNAME = mysql
+HOSTNAME = localhost
+DATABASE = www_gdwse_com
+USERNAME = root
+# USERNAME = www_gdwse_com
+PASSWORD = ""
+# PASSWORD = "dTxP]al^jMGzBX2Ac_3@p.cMh"
 HOSTPORT = 3306
 CHARSET = utf8
 DEBUG = true
