--- a/.env
+++ b/.env
@@ -16,5 +16,10 @@ HOSTPORT = 3306
 CHARSET = utf8
 DEBUG = true
 
+[REDIS]
+HOST = localhost
+PASSWORD = ""
+PORT = 6379
+
 [LANG]
 default_lang = zh-cn
