--- a/.env
+++ b/.env
@@ -6,12 +6,13 @@ DEFAULT_TIMEZONE = Asia/Shanghai
 [DATABASE]
 TYPE = mysql
 # HOSTNAME = mysql
-HOSTNAME = localhost
+# HOSTNAME = localhost
+HOSTNAME = 106.52.77.54
 DATABASE = www_gdwse_com
 USERNAME = root
 # USERNAME = www_gdwse_com
 PASSWORD = ""
-# PASSWORD = "dTxP]al^jMGzBX2Ac_3@p.cMh"
+PASSWORD = "01Da2]l^607d004K6b5A86d/3@n.6013Fe"
 HOSTPORT = 3306
 CHARSET = utf8
 DEBUG = true
