--- a/.env
+++ b/.env
@@ -11,7 +11,7 @@ HOSTNAME = 106.52.77.54
 DATABASE = www_gdwse_com
 USERNAME = root
 # USERNAME = www_gdwse_com
-PASSWORD = ""
+# PASSWORD = ""
 PASSWORD = "01Da2]l^607d004K6b5A86d/3@n.6013Fe"
 HOSTPORT = 3306
 CHARSET = utf8
