--- a/.env
+++ b/.env
@@ -9,10 +9,10 @@ TYPE = mysql
 # HOSTNAME = localhost
 HOSTNAME = 106.52.77.54
 DATABASE = www_gdwse_com
-USERNAME = root
-# USERNAME = www_gdwse_com
+# USERNAME = root
+USERNAME = www_gdwse_com
 # PASSWORD = ""
-PASSWORD = "01Da2]l^607d004K6b5A86d/3@n.6013Fe"
+PASSWORD = "dTxP]al^jMGzBX2Ac_3@p.cMh"
 HOSTPORT = 3306
 CHARSET = utf8
 DEBUG = true
