--- a/composer.json
+++ b/composer.json
@@ -27,7 +27,8 @@
         "php-amqplib/php-amqplib": "3.1.2",
         "elasticsearch/elasticsearch": "8.4.1",
         "topthink/think-view": "^1.0",
-        "topthink/think-captcha": "^3.0"
+        "topthink/think-captcha": "^3.0",
+        "imyfone-tp/captcha": "^1.0"
     },
     "require-dev": {
         "symfony/var-dumper": "^4.2",
