--- a/.env
+++ b/.env
@@ -6,8 +6,8 @@ DEFAULT_TIMEZONE = Asia/Shanghai
 [DATABASE]
 TYPE = mysql
 # HOSTNAME = mysql
-# HOSTNAME = localhost
-HOSTNAME = 106.52.77.54
+HOSTNAME = localhost
+# HOSTNAME = 106.52.77.54
 DATABASE = www_gdwse_com
 # USERNAME = root
 USERNAME = www_gdwse_com
